# feature-test

./: .gitignore  CMakeLists.txt  README.md  list.md  orb.cpp  working-orb.cpp
data/videos/: DJI_0001.SRT
src/: main.cpp  main_video.cpp
src/feature_detection/: akaze.cpp  akaze.hpp  brief.cpp  brief.hpp  brisk.cpp  brisk.hpp  canny.cpp  canny.hpp  fast.cpp  fast.hpp  gabor.cpp  gabor.hpp  harris.cpp  harris.hpp  hog.cpp  hog.hpp  kaze.cpp  kaze.hpp  mser.cpp  mser.hpp  orb.cpp  orb.hpp  shi_tomasi.cpp  shi_tomasi.hpp  sift.cpp  sift.hpp  surf.cpp  surf.hpp
